install/lab2-install-gemfire-k8s-tlsroute/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: contour
  listeners:
  - name: my-gateway-listener
    protocol: TLS
    port: 9000
    tls:
      mode: Passthrough
